<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="com.crashlytics.useFirebaseAppId" tools:ignore="ExtraTranslation">true</string>

    <string name="app_name">Wallet Manager</string>
    <string name="text_continue">Continue</string>
    <string name="amount_hint">0000.00</string>
    <string name="category_title">Category</string>
    <string name="description_title">Description</string>
    <string name="description_et_hint">Describe your transaction here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_transaction_categories">Transaction categories</string>
    <string name="delete_category_message">Are you sure you want to delete this Category?</string>
    <string name="delete_category_ok_message">Category deleted correctly</string>
    <string name="cannot_delete_category_message">You cannot delete this category because it is associated to some transaction. Please delete related transactions before</string>
    <string name="default_confirmation">Yes</string>
    <string name="ok_confirmation">Ok</string>
    <string name="default_negation">No</string>
    <string name="create_account_btn_text">Create</string>
    <string name="delete_account_message">Are you sure you want to delete this account?</string>
    <string name="delete_account_ok_message">Account deleted successfully</string>
    <string name="delete_account_not_empty_message">Cannot delete account because it is not empty</string>
    <string name="delete_account_wrong_message">Cannot delete account</string>
    <string name="account_title">Account</string>
    <string name="origin_account_title">Origin Account</string>
    <string name="destination_account_title">Destination Account</string>
    <string name="transfer_title">Transfer</string>
    <string name="transfer_description"><![CDATA[%1$s -> %2$s]]></string>
    <string name="fixed_expense_payment_title">Fixed Expense Payment</string>
    <string name="not_enough_money_transfer">Not enough money in origin account</string>
    <string name="not_enough_money_transaction">Not enough money in account</string>
    <string name="unknown_error">Unknown Error</string>
</resources>
