<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="handler"
            type="com.schweitzering.walletmanager.transaction.TransactionHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <EditText
            android:id="@+id/et_value"
            android:layout_width="match_parent"
            android:layout_height="@dimen/value_input_et_height"
            android:layout_marginStart="@dimen/standard_margin_separation"
            android:layout_marginEnd="@dimen/standard_margin_separation"
            android:text="@={`` + handler.amount}"
            android:hint="$0 usd"
            android:inputType="number"
            android:digits="0123456789"
            android:background="@drawable/bg_description_et"
            style="@style/BalanceText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_category"
            style="@style/TransactionTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_title"
            android:layout_marginTop="@dimen/view_separation"
            android:layout_marginStart="@dimen/standard_margin_separation"
            app:layout_constraintTop_toBottomOf="@+id/et_value"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin_separation"
            android:layout_marginEnd="@dimen/standard_margin_separation"
            app:layout_constraintTop_toBottomOf="@+id/tv_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/title_description_separation" />

        <TextView
            android:id="@+id/tv_account"
            style="@style/TransactionTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_title"
            android:layout_marginTop="@dimen/view_separation"
            android:layout_marginStart="@dimen/standard_margin_separation"
            app:layout_constraintTop_toBottomOf="@+id/spinner_category"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spinner_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin_separation"
            android:layout_marginEnd="@dimen/standard_margin_separation"
            app:layout_constraintTop_toBottomOf="@+id/tv_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/title_description_separation" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/TransactionTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_title"
            android:layout_marginTop="@dimen/view_separation"
            android:layout_marginStart="@dimen/standard_margin_separation"
            app:layout_constraintTop_toBottomOf="@+id/spinner_account"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_description_height"
            android:inputType="textMultiLine"
            android:layout_marginStart="@dimen/standard_margin_separation"
            android:layout_marginEnd="@dimen/standard_margin_separation"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="top"
            android:text="@={handler.description}"
            android:padding="@dimen/standard_margin_separation"
            android:hint="@string/description_et_hint"
            android:background="@drawable/bg_description_et"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/title_description_separation" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>